[package]
name = "telegram-api"
description = "Telegram Bot API library"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mayocream/telegram-api"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
